tests/ui/dst/dst-bad-coerce4.stderr
error[E0308]: mismatched types
  --> $DIR/dst-bad-coerce4.rs:10:32
   |
LL |     let f2: &Fat<[isize; 3]> = f1;
   |             ----------------   ^^ expected `&Fat<[isize; 3]>`, found `&Fat<[isize]>`
   |             |
   |             expected due to this
   |
   = note: expected reference `&Fat<[isize; 3]>`
              found reference `&Fat<[isize]>`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
